--- a/src/style/others.css
+++ b/src/style/others.css
@@ -28,13 +28,17 @@
   font-size: x-small;
 }
 
-.post-body{
+.post-body {
   padding: 5px;
 }
 
-.post-body > p{
+.post-body > p {
   text-align: justify;
   text-indent: 36px;
 }
 
-
+.post-body > img {
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+}
