modified:   deno.json

--- a/src/style/hono-blog.css
+++ b/src/style/hono-blog.css
@@ -791,3 +791,61 @@ p > select {
     display: none;
   }
 }
+/*  */
+.nav-link {
+  text-decoration: none;
+  color: var(--cfg);
+}
+
+.tb {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
+.post-head {
+  padding: 5px;
+  text-align: center;
+  border-bottom: 0.5px solid var(--cmed);
+}
+.post-head > .head-small {
+  font-style: italic;
+  font-weight: 600;
+  margin-right: 36px;
+}
+.badge {
+  background-color: var(--cfg);
+  color: var(--cbg);
+  padding: 4px 8px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: x-small;
+}
+
+.post-body {
+  padding: 5px;
+}
+
+.post-body > p {
+  text-align: justify;
+  text-indent: 36px;
+}
+
+.post-body > img {
+  width: 100%;
+  height: 100px;
+  border-radius: 10px;
+}
+
+.head-small {
+  font-style: italic;
+  font-weight: 600;
+  margin-right: 18px;
+}
+
+.post-link {
+  text-decoration: none;
+  color: var(--cfg);
+}
+
+
